versioned_docs/version-1.21.x/extensions/official/ros-ext/mcap.mdx
---
title: MCAP
description: Parameters and examples for working with MCAP files in ReductROS.
---

# MCAP

MCAP is a container format for recorded robotics data. It can store ROS1, ROS2, and Protobuf messages across many topics together with timestamps, schemas, and channel metadata. ReductROS can extract and transform ROS1, ROS2, and Protobuf messages from MCAP files stored in ReductStore (content type `application/mcap`).

import DemoLicenseNote from "@site/src/components/promotional/DemoLicenseNote";

<DemoLicenseNote />

## Query format

A user can use the `ext` query parameter to activate the `ros` extension and define the parameters for extracting and transforming ROS data in the following format:

```python
{
    "ext": {
        "ros": {
            "extract": {
               "topic": "string",      # ROS topic name to extract from
               "encode": "object",     # e.g., {"data":"jpeg"} for JPEG encoding
                "as_label": "object"   # e.g., {"label_name": "path_to_json"}
            },

            "transform": {
              "include": "string[]",   # e.g., ["/topic-.*"]
              "exclude": "string[]",   # e.g., ["/topic-b", "/ext-.*"]
              "duration": "string",    # e.g., "1m" (max episode duration)
              "size": "string"         # e.g., "100MB" (max content length)
            }
        }
    }
}
```

### Data extraction

The `extract` property allows you to specify the ROS topic from which to extract messages and convert them to JSON format.
The extension reads the MCAP file, selects the parser from the schema encoding of the requested channel, and returns each decoded message as a JSON record with the timestamp from the message header (when present).

| Parameter        | Type     | Mandatory | Description                                                                                                                                                  |
| ---------------- | -------- | --------- | ------------------------------------------------------------------------------------------------------------------------------------------------------------ |
| `topic`          | `string` | Yes       | The name of the ROS topic to extract messages from. This should match the topic names used in the MCAP file.                                                 |
| `encode`         | `object` | No        | A dictionary specifying how to encode binary data in the messages. For example, `{"data": "jpeg"}` for JPEG encoding.                                        |
| `encode.<field>` | `string` | No        | The encoding format for binary fields in the message. Supported values are `base64` and `jpeg`. If not specified, the field will be returned as a JSON list. |
| `as_label`       | `object` | No        | An object that specifies dynamic computed labels that will be delivered to the client. Can be a basis for output filtering.                                  |

:::info
MCAP extraction supports ROS1 (`ros1msg`), ROS2 (`cdr`), and Protobuf (`protobuf`) schema encodings. Mixed MCAP files are supported, so topics using different encodings can coexist in the same input file and still be extracted correctly topic by topic. For Protobuf channels, the schema must be a `FileDescriptorSet` and the `schema` label in the output is the fully qualified message type, for example `factory.EnvironmentReading`.
:::

#### Encoding binary data

The `encode` property allows you to specify how to handle binary data in the extracted messages.
You can choose to encode binary fields in the following formats:

| Format   | Description                                                                              |
| -------- | ---------------------------------------------------------------------------------------- |
| `base64` | Encodes binary data as a base64 string, suitable for text-based formats like JSON.       |
| `jpeg`   | Encodes binary data as a JPEG image encoded to a base64 string, suitable for image data. |

:::info
Currently, the extension supports encoding only **[sensor_msgs/msg/Image](http://docs.ros.org/en/noetic/api/sensor_msgs/html/msg/Image.html)** messages with `encoding` set to `rgb8`, `bgr8`, or `mono8`.
:::

### Data transformation

The `transform` property allows you to generate new MCAP episodes with topic filtering and size/duration limits.

| Field      | Type       | Mandatory | Description                                                                                     |
| ---------- | ---------- | --------- | ----------------------------------------------------------------------------------------------- |
| `include`  | `string[]` | No        | List of topics to include. Supports regular expressions. If omitted, all topics are considered. |
| `exclude`  | `string[]` | No        | List of topics to exclude. Applied **after** `include`.                                         |
| `duration` | `string`   | No        | Maximum duration per episode (e.g., `5m`, `2h`, `1d`).                                          |
| `size`     | `string`   | No        | Maximum content length per episode (e.g., `100MB`, `1GB`).                                      |

:::info
The `size` parameter refers to the uncompressed size of the episode. The actual file size may be smaller due to MCAP's chunk compression.
:::

#### Transforming MCAP

When `transform` is provided, the extension:

1. Reads the source MCAP files.
2. Applies topic filters (`include` first, then `exclude`).
3. Streams matching messages into a new MCAP file.
4. Starts a new episode whenever `duration` or `size` is reached.

**Example**

```json
{
  "ext": {
    "ros": {
      "transform": {
        "include": ["/camera/.*", "^/imu/data$"],
        "exclude": ["/camera/debug"],
        "duration": "10m",
        "size": "500MB"
      }
    }
  }
}
```

**Result**

- All topics starting with `/camera/` are included (because of `/camera/.*`).
- The topic `/imu/data` is included exactly (because of `^/imu/data$`).
- The topic `/camera/debug` is excluded, even though it matches the `/camera/.*` rule.
- Output is a sequence of MCAP episodes, each ≤ 10 minutes or ≤ 500 MB (whichever comes first).

## Examples

The following examples demonstrate how to use the **ReductROS** extension to extract and transform ROS messages.
Although this example is written in Python, it can be run using any of the official SDKs.

import CodeBlock from "@theme/CodeBlock";
import Tabs from "@theme/Tabs";
import TabItem from "@theme/TabItem";

### Extracting messages as JSON

This example demonstrates how to use the ROS extension to extract a topic from an MCAP file stored in ReductStore,
convert it to JSON format, and use `as_label` plus `when` for filtering.

import RosExtractTopicPy from "!!raw-loader!../../../examples/py/src/ext_ros_mcap_extract.py";

<Tabs>
  <TabItem value="Python">
    <CodeBlock language="python">{RosExtractTopicPy}</CodeBlock>
  </TabItem>
</Tabs>

#### Expected output

The expected output of the above code is as follows:

```
Record timestamp: 24
Record labels: {'@encoding': 'cdr', '@schema': 'std_msgs/String', '@topic': '/test', '@data1': 'hello'}
{"data":"hello"}
```

#### Explanation

- The extension extracts ROS messages from an `.mcap` file stored in ReductStore.
- Only messages from the topic `/test` are selected using the `topic` filter in the `ros.extract` configuration.
- The content of each message is decoded according to the schema encoding stored in the MCAP channel metadata.
- The decoded message is returned as JSON with the field `data`, matching the `std_msgs/String` schema.
- Each record corresponds to one ROS message and includes:
- The decoded JSON payload, e.g., `{"data":"hello"}`
- Message metadata as labels, including:
  - `topic`: `/test`
  - `schema`: `std_msgs/String`
  - `encoding`: `cdr`
- The `as_label` option adds `@data1` based on the JSON path `data`.
- The `when` filter selects only records where `@data1` equals `hello`.

### Extracting messages as JSON with JPEG encoding

This example demonstrates how to use the ROS extension to extract topic from an MCAP file stored in ReductStore and
convert it to JSON format, while also encoding binary image data into JPEG format.

import RosExtractImagePy from "!!raw-loader!../../../examples/py/src/ext_ros_mcap_extract_jpeg.py";

<Tabs>
  <TabItem value="Python">
    <CodeBlock language="python">{RosExtractImagePy}</CodeBlock>
  </TabItem>
</Tabs>

#### Expected output

The expected output of the above code is as follows:

```
Record timestamp: 1753341400522732
Record labels: {'@encoding': 'cdr', '@schema': 'sensor_msgs/Image', '@topic': '/image_raw'}
Image parameters: {'height': 720, 'width': 1280, 'is_bigendian': 0, 'encoding': 'rgb8', 'step': 3840, 'header': {'frame_id': 'camera', 'stamp': {'sec': 1753341400, 'nanosec': 522732248}}}
```

#### Explanation

- The extension extracts ROS messages from an `.mcap` file stored in ReductStore.
- Only messages from the topic `/image_raw` are selected using the `topic` filter in the `ros.extract` configuration.
- The content of each message is decoded according to the schema encoding stored in the MCAP channel metadata.
- The decoded message is returned as JSON with the field `data`, which contains the image data encoded in JPEG format.
- Each record corresponds to one ROS message and includes:
- The decoded image parameters, such as height, width, encoding, and step.
- The timestamp from the message header.
- Message metadata as labels, including:
  - `topic`: `/image_raw`
  - `schema`: `sensor_msgs/Image`
  - `encoding`: `cdr`

### Transforming MCAP with splitting and topic filtering

This example demonstrates how to use the ROS extension to create new MCAP episodes while including and excluding topics using regular expressions.

import RosTransformMcapPy from "!!raw-loader!../../../examples/py/src/ext_ros_mcap_transform.py";

<Tabs>
  <TabItem value="Python">
    <CodeBlock language="python">{RosTransformMcapPy}</CodeBlock>
  </TabItem>
</Tabs>

#### Expected output

The expected output of the above code is as follows:

```
Record timestamp: 1755592486439270
Episode file size: 1602 bytes
Record timestamp: 1755592546439270
Episode file size: 1586 bytes
Record timestamp: 1755592606439270
Episode file size: 1582 bytes
Record timestamp: 1755592666439270
Episode file size: 1585 bytes
Record timestamp: 1755592726439270
Episode file size: 1558 bytes
```

#### Explanation

- The extension reads an `.mcap` file stored in ReductStore.
- Topics matching `/topic-.*` (aside from `/topic-b`) are included.
- Topics matching `/ext-.*` are excluded.
- The extension writes a sequence of new MCAP episodes capped at **1 minute** or **100 MB**, whichever comes first.
